--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ margin-top: 27px;
     width: 362px;
 height: 171px;
 background: #FFFFFF;
+display: inline-block;
 }
 h5{
  margin-top: 65px;
@@ -37,5 +38,21 @@ margin-left: 37px;
 font-weight: 700;
 font-size: 10px;
 color: #8A8787;
+display: inline-block;
 }
-
+.mesame{
+    margin-left: 37px;
+    margin-top:11px;
+    display: inline-block;
+}
+.meotxe{
+    margin-left:11px;
+    margin-top:8px;
+    display: inline-block;
+}
+.container2{
+    background: #F5F5F5;
+    width: 1165px;
+    margin: 0 auto;
+    margin-top: 51px;
+}
